Fixes input text being cropped

--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -9,7 +9,7 @@ label {
 
 .form-control {
 	box-shadow: none;
-	padding: 20px;
+	padding: 0 20px;
 
 	&:focus {
 		box-shadow: none;
